<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Title1"
        style="@style/section_title_pestana4"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:text="@string/title_MyList_joke" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border" >

            <TextView
                android:id="@+id/textoBromista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/level_bromista"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/NivelBromista"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textoBromista"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/Icono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border_list" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border_list"
            android:paddingLeft="30dp"
            android:paddingRight="25dp"
            android:paddingTop="80dp"
            android:text="@string/lista_vacia"
            android:textColor="@android:color/black"
            android:textStyle="normal" >
        </TextView>
    </LinearLayout>

</LinearLayout>